--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "mysql2": "^3.4.0",
+    "nodemon": "^2.0.22",
     "path": "^0.12.7",
     "sequelize": "^6.32.1",
     "sequelize-cli": "^6.6.1"
